sort.basic.cocktail.AlgCocktailSort3.scala.error
Erreur de compilation :
AlgCocktailSort3:9: error: inutile is already defined as variable inutile
  var inutile=2
      ^AlgCocktailSort3:10: error: inutile is already defined as variable inutile
  var inutile=3
      ^AlgCocktailSort3:11: error: inutile is already defined as variable inutile
  var inutile=4
      ^