sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  
  var debut = 0
  var fin = getNombreValeurs()-2
  var na=2
  var nb=2
  var inutile=1
  var inutile=2
  var inutile=3
  var inutile=4
  do{
    na=0
    nb=0
    for(i<-debut to fin){
      if(getValeur(i)>getValeur(i+1)){
        echange(i,i+1)
        na=na+1
      }
    }
      if(na==0){
        return
      } else {
      
    
    fin=fin-1
  
  	for(i<- debut to fin-1){
      if (getValeur(fin-i)<getValeur(fin-i-1)){
        echange(fin-i,fin-i-1)
        nb=nb+1
      	} 
    	}
  	debut=debut+1
      }
      } while(nb!=0)
}
